Use zef ecosystem

--- a/dist.ini
+++ b/dist.ini
@@ -7,5 +7,7 @@ filename = lib/Math/Libgsl/Eigensystem.rakumod
 [PruneFiles]
 ; match = ^ 'xt/'
 
+[UploadToZef]
+
 [Badges]
 provider = github-actions/test
